syntax = "proto3";

option csharp_namespace = "Microsoft.Dafny";

package DafnyExecutorServer;

// Interface exported by the server.
service DafnyVerifierService {
  // Run Dafny on the given code and returns the output
  rpc Verify(VerificationRequest) returns (VerificationResponse) {}
  rpc CloneAndVerify(CloneAndVerifyRequest) returns (VerificationResponse) {}
  rpc CreateTmpFolder(Empty) returns (TmpFolder) {}
  rpc RemoveFolder(TmpFolder) returns (Empty) {}
  rpc DuplicateFolder(TmpFolder) returns (TmpFolder) {}
}

message Empty {
}

message CloneAndVerifyRequest {
  // Path to the base folder that needs to be cloned
  string directoryPath = 1;
  // Dafny code that needs to be verified given by actual code
  string code = 2;
  // The location where the code should be written in the dafny server
  string modifyingFile = 3;
  // List of arguments to be passed to Dafny
  repeated string arguments = 4;
}

message TmpFolder {
  // Path to the temporary folder
  string path = 1;
  string modifyingFile = 2;
}

message VerificationRequest {
  // Dafny code that needs to be verified given by actual code
  string code = 1;
  // The location where the code should be written in the dafny server
  string path = 2;
  // List of arguments to be passed to Dafny
  repeated string arguments = 3;
}

message VerificationResponse {
  // Output of Dafny
  string response = 1;
  string fileName = 2;
  float startTime = 3;
  float executionTime = 4;
}

